add ability to enter random id

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <main>
+      <input class="team" type="text" placeholder="Type a random id" />
+      <button class="submit" b>Submit</button>
+
       <h1 class="name">Team Name</h1>
       <img class="logo" src="https://placehold.it/500" alt="" />
     </main>
